# sub0-hackathon-arkiv

./: .gitignore  AI_EVALUATION_COMPLETE.md  ARKIV_ENTITY_UPDATE_COMPLETE.md  ARKIV_HASH_FIX.md  ARKIV_IMPLEMENTATION_SUMMARY.md  ARKIV_INTEGRATION.md  ARKIV_PROJECTS_FIX.md  ARKIV_SMART_CONTRACT_SYNC.md  BACKEND_FIX_APPLIED.md  BUTTON_FUNCTIONAL_SUMMARY.md  BUTTON_READY.md  COMPLETION_REPORT.md  COMPONENT_INTEGRATION_SUMMARY.md  DATABASE_RESET_COMPLETE.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_INDEX_COMPLETE.md  EVALUATION_BUTTON_SUMMARY.md  EVALUATION_FEATURE.md  EXECUTION_PLAN.md  EXECUTIVE_SUMMARY.md  FINAL_SUMMARY.md  FRONTEND_INTEGRATION.md  FRONTEND_STARTED.md  INTEGRATION_VISUAL_SUMMARY.md  ITERATION_COMPLETED.md  ITERATION_SUMMARY.md  LANGCHAIN_QUICK_EXAMPLES.py  LAUNCH_BUTTON_IMPLEMENTED.md  LAUNCH_PROJECT_BUTTON.md  MESSAGE_PERSISTENCE_FIX.md  MODERACION_FIXED.md  MODERATION_EVALUATION_BUTTON.md  MODERATION_FIX.md  PROGRESS_SUMMARY.md  PROJECTSLIST_FIX.md  PROJECT_STATUS.md  QUICK_START.md  QUICK_START_ROCOCO.md  README.md  READY_TO_EXECUTE.md  (+22 more)
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/FundingOracle/: FlowDiagram.tsx  FundingOracle.tsx  ModerationView.tsx  Notification.tsx  ProjectsListView.tsx  SubmitProjectForm.tsx
frontend/src/config/: api.ts
frontend/src/services/: projectService.ts
smart-contract/: COMPILE_AND_TEST.md  FUNDING_ESCROW.md
smart-contract/funding-escrow/: .gitignore  Cargo.toml  SETUP.md  lib.rs
smart-contract/funding-escrow/examples/: integration_flow.rs
smart-contract/funding-escrow/src/: lib.rs
src/: main.py
src/models/: milestone.py  sponsor.py
src/routes/v1/: ai.py  arkiv.py  escrow.py
src/schemas/: milestone.py
src/services/: arkiv.py  langchain_service.py
src/settings/: openai.py
