[package]
name = "funding-escrow"
version = "0.1.0"
authors = ["Sub0 Team"]
edition = "2021"

[lib]
name = "funding_escrow"
path = "lib.rs"

[dependencies]
ink = { version = "4.3", default-features = false }
ink_primitives = { version = "4.3", default-features = false }
ink_prelude = { version = "4.3", default-features = false }
ink_env = { version = "4.3", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
